--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
 *{
     scroll-behavior: smooth;
 }
+@media screen and (max-width: 640px)
+{
+    body, html{
+        width: 100vw;
+        overflow-x: hidden;
+        padding: 0.8em 0;
+    }
+}
 
 .logo{
     font-family: 'Kaushan Script', cursive;
